<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search icon -->
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <!-- View Favorites -->
    <item
        android:id="@+id/action_view_favorites"
        android:title="@string/view_favorites"
        android:icon="@drawable/ic_star"
        app:showAsAction="always" />

    <!-- Logout -->
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always" />
</menu>
